Regression: Blender 4.0 3D View resizing in Workbench mode slower and laggier than 3.6 #113010

Closed
opened 2023-09-28 12:55:43 +02:00 by Ludvik Koutny · 6 comments
Contributor

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.13

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-09-28 00:03, hash: 751c9ef620a0
Worked: 3.6.2

Short description of error
Resizing 3D view is significantly slower and laggier in 4.0 compared to 3.6, but only if the 3D View is in one of the workbench modes. If the 3D View is in Eevee, the performance is the same between 3.6 and 4.0.

See attached ResizeRegression.mp4 for visual example.

Exact steps for others to reproduce the error

  1. Open both Blender 3.6 and 4.0.
  2. Add some content to the 3D view so that it covers most of the 3D view area. A monkey mesh will do.
  3. Make sure 3D View is in Solid shaded mode
  4. Drag the 3D View space border to resize it in both 3.6 and 4.0
    Result: 3D View resizing is slower and laggier in 4.0 compared to 3.6
    Expected: 3D View resizing in 4.0 is same performance or better than 3.6
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2080 Ti/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.13 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-09-28 00:03, hash: `751c9ef620a0` Worked: 3.6.2 **Short description of error** Resizing 3D view is significantly slower and laggier in 4.0 compared to 3.6, but only if the 3D View is in one of the workbench modes. If the 3D View is in Eevee, the performance is the same between 3.6 and 4.0. See attached ResizeRegression.mp4 for visual example. <video src="/attachments/9fa33223-def0-4146-88da-7ac286c74c4d" controls></video> **Exact steps for others to reproduce the error** 1. Open both Blender 3.6 and 4.0. 2. Add some content to the 3D view so that it covers most of the 3D view area. A monkey mesh will do. 3. Make sure 3D View is in Solid shaded mode 4. Drag the 3D View space border to resize it in both 3.6 and 4.0 Result: 3D View resizing is slower and laggier in 4.0 compared to 3.6 Expected: 3D View resizing in 4.0 is same performance or better than 3.6
Ludvik Koutny added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-09-28 12:55:44 +02:00

Thanks for the report, @Rawalanche.

For me it's very difficult to notice, but after checking the FPS I noticed that Blender 4.0 actually has a penalty:

3.6 4.0
GIF_3_6.gif GIF_4_1.gif

Appears to involve Workbench Next... @pragma37

Thanks for the report, @Rawalanche. For me it's very difficult to notice, but after checking the FPS I noticed that Blender 4.0 actually has a penalty: | 3.6 | 4.0 | | -- | -- | | ![GIF_3_6.gif](/attachments/27d65da8-7925-4db2-933b-e79548bf4c23) | ![GIF_4_1.gif](/attachments/883fbbcc-bdf4-4c7a-b7df-cdfa961ea2a6) | Appears to involve Workbench Next... @pragma37
Germano Cavalcante added the
Module
EEVEE & Viewport
label 2023-09-28 21:47:13 +02:00
Member

I can confirm. This is more noticeable with higher frame rate value

I can confirm. This is more noticeable with higher frame rate value
Pratik Borhade added
Priority
High
Status
Confirmed
and removed
Priority
Normal
Status
Needs Triage
labels 2023-09-30 07:51:36 +02:00
Member

I can't reproduce it on my end.
However, could you check if this PR helps?
#113251 (comment)

I can't reproduce it on my end. However, could you check if this PR helps? https://projects.blender.org/blender/blender/pulls/113251#issuecomment-1037283

Since for me the problem is not that noticeable either. I would wait for @Rawalanche or @PratikPB2123 to test.
A build with the patch applied can be downloaded from:
https://builder.blender.org/download/patch/PR113251/

Since for me the problem is not that noticeable either. I would wait for @Rawalanche or @PratikPB2123 to test. A build with the patch applied can be downloaded from: https://builder.blender.org/download/patch/PR113251/
Author
Contributor

Since for me the problem is not that noticeable either. I would wait for @Rawalanche or @PratikPB2123 to test.
A build with the patch applied can be downloaded from:
https://builder.blender.org/download/patch/PR113251/

Can confirm. This PR fixes it, the performance is same, if not better than in 3.6.

> Since for me the problem is not that noticeable either. I would wait for @Rawalanche or @PratikPB2123 to test. > A build with the patch applied can be downloaded from: > https://builder.blender.org/download/patch/PR113251/ Can confirm. This PR fixes it, the performance is same, if not better than in 3.6.
Member

Awesome! Thanks for checking.

Awesome! Thanks for checking.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-10-06 15:31:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#113010
No description provided.